2011-10-05  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinInt.h:   Remove tclWinProcs, as it is no longer
	* win/tkWinX.c:     being used.
	* win/tkWinTest.c:

2011-09-27  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkImgPNG.c (WriteExtraChunks): [Bug 3405839]: Write the sDAT
	chunk with the correct length.

2011-09-08  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkDecls.h: Don't let tkDecls.h depend on <tchar.h> on
	windows, not even in UNICODE mode.

2011-09-01  Donal K. Fellows  <dkf@users.sf.net>

	* doc/photo.n: Correctly documented what the [$ph data] command
	produces without the -format option.

2011-08-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinDialog.c: [Bug 3388350]: mingw64 compiler warnings
	* win/tkWinEmbed.c
	* win/tkWinMenu.c
	* win/tkWinTest.c
	* win/tkWinWm.c
	* win/tkWinX.c

2011-08-13  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkBitmap.c: [Bug 3388350]: mingw64 compiler warnings
	* generic/tkConsole.c
	* win/tkWinDialog.c
	* win/tkWinEmbed.c
	* win/tkWinSend.c
	* win/tkWinSendCom.c

2011-08-05  Don Porter  <dgp@users.sourceforge.net>

	*** 8.6b2 TAGGED FOR RELEASE ***

	* changes:	Updates for 8.6b2 release.

2011-08-03  Don Porter  <dgp@users.sourceforge.net>

	* win/tkWinWm.c: [Bug 2891541]: Merge of 8.5.8 fix from Pat Thoyts.
	Permit normal behaviour on Windows for a grabbed toplevel when it
	is the main window.

2011-08-03  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinDialog.c: [Bug 3314770]: regression - Windows file
	dialogs not resizable

2011-07-28  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Updates for 8.6b2 release.

2011-07-28  Jan Nijtmans  <nijtmans@users.sf.net>

	* xlib/X11/Xutil.h: [Bug 3380684]: XEmptyRegion prototype doesn't
	match usage

2011-07-19  Donal K. Fellows  <dkf@users.sf.net>

	* doc/*.3, doc/*.n: Many small fixes to documentation as part of
	project to improve quality of generated HTML docs.

2011-07-18  Don Porter  <dgp@users.sourceforge.net>
